<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    >
    <data>
        <variable
            name="charName"
            type="String" />

        <variable
            name="gender"
            type="String" />

        <variable
            name="aliases"
            type="String" />
        <variable
            name="titles"
            type="String" />
        <variable
            name="playedBy"
            type="String" />
    </data>
    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/charDetailsView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <TextView
            android:id="@+id/bookNameTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/view_padding"
            android:background="@color/cardview_light_background"
            android:textAlignment="viewStart"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size"
            android:text="@{ `Name: ` + charName}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="Name" />

        <TextView
            android:id="@+id/bookGenderTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/view_padding"
            android:background="@color/cardview_light_background"
            android:textAlignment="viewStart"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size"
            android:text="@{ `Gender: ` + gender}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/bookNameTextView"
            tools:text="Gender" />


        <TextView
            android:id="@+id/bookTitlesTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/view_padding"
            android:background="@color/cardview_light_background"
            android:textAlignment="viewStart"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size"
            app:visibility="@{titles}"
            android:text="@{ `Titles: ` + titles}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/bookGenderTextView"
            tools:text="Titles" />

        <TextView
            android:id="@+id/bookAliasesTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/view_padding"
            android:background="@color/cardview_light_background"
            android:textAlignment="viewStart"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size"
            app:visibility="@{aliases}"
            android:text="@{ `Aliases: ` + aliases}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/bookTitlesTextView"
            tools:text="Aliases" />


        <TextView
            android:id="@+id/bookPlayedByTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/view_padding"
            android:background="@color/cardview_light_background"
            android:textAlignment="viewStart"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size"
            app:visibility="@{playedBy}"
            android:text="@{ `PlayedBy: ` + playedBy}"
            app:layout_constraintBottom_toTopOf="@+id/divider"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/bookAliasesTextView"
            tools:text="PlayedBy" />


        <View
            android:id="@+id/divider"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="5dp"
            android:background="#cacaca"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"></View>
    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>