<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:openDrawer="start">

    <include
        android:id="@+id/app_bar_main"
        layout="@layout/app_bar_main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true"/>


    <androidx.recyclerview.widget.RecyclerView
        android:nestedScrollingEnabled="false"
        android:id="@+id/recyclerView"
        android:layout_width="250dp"
        android:overScrollMode="never"
        android:layout_gravity="start"
        android:background="@color/cardview_light_background"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        android:layout_height="match_parent"/>

</androidx.drawerlayout.widget.DrawerLayout>